Extract texts from the ConfigurationInspectionPane in ResourceBoundle

--- a/src/main/resources/i18n/ui-strings.properties
+++ b/src/main/resources/i18n/ui-strings.properties
@@ -1,5 +1,12 @@
 home=home
 
+inspector.title=Inspector
+inspector.configuration=Configuration
+inspector.workflow=Workflow
+inspector.layout=Layout
+inspector.layouts=Layouts
+inspector.export-java=Export Java
+
 about.title=About
 about.about=About
 about.license=License
