Extract texts from the ConversionPane in ResourceBoundle

--- a/src/main/resources/i18n/ui-strings.properties
+++ b/src/main/resources/i18n/ui-strings.properties
@@ -1,5 +1,31 @@
 home=home
 
+conversion.title=Conversion
+conversion.server-url=Server URL
+conversion.workflow=Workflow
+conversion.apply-limits=Apply Job Limits
+conversion.start=Start
+conversion.table.job-id=Job ID
+conversion.table.file=File
+conversion.table.workflow=Workflow
+conversion.table.state=State
+conversion.table.warnings-short=W
+conversion.table.errors-short=E
+conversion.table.server-instance=Server Instance
+conversion.table.context.open-result=Open Result
+conversion.table.context.save-result=Save Result
+conversion.table.context.open-original=Open Original File
+conversion.table.context.show-log=Show Log
+conversion.table.context.abort=Abort
+conversion.table.context.retry=Retry
+conversion.table.context.inspect-workflow=Inspect Workflow
+conversion.table.context.remove=Remove (Finished / Aborted only)
+conversion.abort-all-jobs=Abort All
+conversion.open-all-results=Open Results
+conversion.clear-all-failed-jobs=Clear Failed Jobs
+conversion.clear-all-finished-jobs=Clear Finished Jobs
+conversion.open-all-logs=Show Log Messages
+
 inspector.title=Inspector
 inspector.configuration=Configuration
 inspector.workflow=Workflow
