Extract texts from the JmxPane in ResourceBoundle

--- a/src/main/resources/i18n/ui-strings.properties
+++ b/src/main/resources/i18n/ui-strings.properties
@@ -26,6 +26,13 @@ conversion.clear-all-failed-jobs=Clear Failed Jobs
 conversion.clear-all-finished-jobs=Clear Finished Jobs
 conversion.open-all-logs=Show Log Messages
 
+jmx.title=JMX
+jmx.url=JMX URL
+jmx.clear=Clear View
+jmx.status.connecting=Connecting...
+jmx.status.connect=Connect
+jmx.status.disconnect=Disconnect
+
 inspector.title=Inspector
 inspector.configuration=Configuration
 inspector.workflow=Workflow
