Extract texts from the LogPane in ResourceBoundle

--- a/src/main/resources/i18n/ui-strings.properties
+++ b/src/main/resources/i18n/ui-strings.properties
@@ -26,6 +26,20 @@ conversion.clear-all-failed-jobs=Clear Failed Jobs
 conversion.clear-all-finished-jobs=Clear Finished Jobs
 conversion.open-all-logs=Show Log Messages
 
+server-log.title=Server Log
+server-log.url=Server URL;
+server-log.subscribe=Subscribe
+server-log.unsubscribe=Subscribe
+server-log.clear=Clear
+server-log.scroll-lock=Scoll Lock
+server-log.table.timestamp=Timestamp
+server-log.table.timestamp-format=HH:mm:ss.SSS
+server-log.table.level=Level
+server-log.table.ndc=Nested Diagnostic Context
+server-log.table.logger=Logger
+server-log.table.message=Message
+server-log.table.stacktrace=Stacktrace
+
 jmx.title=JMX
 jmx.url=JMX URL
 jmx.clear=Clear View
