Extract texts from the OptionsPane in ResourceBoundle

--- a/src/main/resources/i18n/ui-strings.properties
+++ b/src/main/resources/i18n/ui-strings.properties
@@ -43,7 +43,8 @@ server-log.table.stacktrace=Stacktrace
 jmx.title=JMX
 jmx.url=JMX URL
 jmx.clear=Clear View
-jmx.status.connecting=Connecting...
+# \u2026 == horizontal ellipsis
+jmx.status.connecting=Connecting\u2026
 jmx.status.connect=Connect
 jmx.status.disconnect=Disconnect
 
@@ -53,6 +54,32 @@ inspector.workflow=Workflow
 inspector.layout=Layout
 inspector.layouts=Layouts
 inspector.export-java=Export Java
+
+options.title=Options
+options.restore-defaults=restore defaults
+options.jms.title=JMS Settings
+options.jms.username=username
+options.jms.password=password
+options.jms.request-queue=request queue
+options.jms.log-topic=log topic
+options.jms.job-factory=job factory
+options.jms.cache-job-factory=Cache JMS Job Factory?
+options.jms.job-priority=job priority
+options.jmx.title=JMX Settings
+options.jmx.username=username
+options.jmx.password=password
+options.misc.title=Misc.
+options.misc.results-folder=results folder
+# \u2026 == horizontal ellipsis
+options.misc.change-results-folder=\u2026
+options.misc.concurrent-jobs=concurrent jobs
+options.misc.default-extension=default ext.
+options.misc.result-filename-pattern=result filename
+options.misc.server-history=server history
+options.misc.clear-server-history=Clear
+options.misc.updates.check-on-start=on every start
+options.misc.updates.check-never=never
+options.misc.updates.check-now=check now
 
 about.title=About
 about.about=About
