Extract texts from the MetroMenuPane in ResourceBoundle

--- a/src/main/resources/i18n/ui-strings.properties
+++ b/src/main/resources/i18n/ui-strings.properties
@@ -1,5 +1,16 @@
 home=home
 
+menu.title=jadice server :: Converter Client
+menu.conversion=Conversion
+menu.server-log=Server Log
+menu.jmx=JMX
+menu.inspector=Inspector
+menu.update-available=Update Available
+menu.enter-fullscreen=Fullscreen
+menu.exit-fullscreen=Exit Fullscreen
+menu.options=Options
+menu.about=About
+
 conversion.title=Conversion
 conversion.server-url=Server URL
 conversion.workflow=Workflow
