--- a/src/main/resources/i18n/ui-strings.properties
+++ b/src/main/resources/i18n/ui-strings.properties
@@ -1,4 +1,6 @@
 home=home
+# %s will be replaced by version number
+app.title=jadice server %s :: Converter Client
 
 menu.title=jadice server :: Converter Client
 menu.conversion=Conversion
