%home -> %app.home

--- a/src/main/resources/i18n/ui-strings.properties
+++ b/src/main/resources/i18n/ui-strings.properties
@@ -1,6 +1,6 @@
-home=home
 # %s will be replaced by version number
 app.title=jadice server %s :: Converter Client
+app.home=home
 
 menu.title=jadice server :: Converter Client
 menu.conversion=Conversion
