Extract texts from Dialogs in ResourceBoundle

--- a/src/main/resources/i18n/ui-strings.properties
+++ b/src/main/resources/i18n/ui-strings.properties
@@ -99,3 +99,26 @@ about.about=About
 about.license=License
 about.3rd-party-licenses=3rd Party Licenses
 about.log=Log
+
+dialogs.conversion.save-error.title=Error
+dialogs.conversion.save-error.masthead=Failed to save file
+# %s will be replaced by version numbers
+dialogs.conversion.save-error.message=Could not save %s
+
+dialogs.jmx.connection-error.title=Error
+dialogs.jmx.connection-error.message=Could not connect to JMX
+
+dialogs.server-log.connection-error.title=Connection Error
+dialogs.server-log.connection-error.message=Cannot subscribe to server log
+
+dialogs.update.update-available.title=Update Check
+dialogs.update.update-available.masthead=New version available
+# %s will be replaced by version numbers
+dialogs.update.update-available.message=New version available: %s\nYour are working with version %s
+dialogs.update.update-available.action=Go to download page
+
+dialogs.update.latest-version.title=Update Check
+dialogs.update.latest-version.message=Your software is up to date
+
+dialogs.update.error.title=Update Check
+dialogs.update.error.message=Could not perform update check
