Extract texts from ApplyLimitsPane in ResourceBoundle

--- a/src/main/resources/i18n/ui-strings.properties
+++ b/src/main/resources/i18n/ui-strings.properties
@@ -39,6 +39,16 @@ conversion.clear-all-failed-jobs=Clear Failed Jobs
 conversion.clear-all-finished-jobs=Clear Finished Jobs
 conversion.open-all-logs=Show Log Messages
 
+conversion.limits.time-limit=Time Limit
+conversion.limits.stream-size-limit=Stream Size Limit
+conversion.limits.stream-count-limit=Stream Count Limit
+conversion.limits.node-count-limit=Node Count Limit
+conversion.limits.page-count-limit=Page Count Limit
+conversion.limits.bytes-per-stream=Bytes per Stream
+conversion.limits.stream-per-node=Streams per Node
+conversion.limits.nodes=Nodes
+conversion.limits.pages=Pages (if applicable)
+
 server-log.title=Server Log
 server-log.url=Server URL;
 server-log.subscribe=Subscribe
