Extract texts from JobLogPane in ResourceBoundle

--- a/src/main/resources/i18n/ui-strings.properties
+++ b/src/main/resources/i18n/ui-strings.properties
@@ -49,6 +49,15 @@ conversion.limits.stream-per-node=Streams per Node
 conversion.limits.nodes=Nodes
 conversion.limits.pages=Pages (if applicable)
 
+job-log.title=Log Messages
+job-log.table.timestamp=Timestamp
+job-log.table.timestamp.format=HH:mm:ss.SSS
+job-log.table.type=Type
+job-log.table.message-id=MessageID
+job-log.table.node=Node
+job-log.table.message=Message
+job-log.table.cause=Cause
+
 server-log.title=Server Log
 server-log.url=Server URL;
 server-log.subscribe=Subscribe
