Extract texts from NumberValidator in ResourceBoundle

--- a/src/main/resources/i18n/ui-strings.properties
+++ b/src/main/resources/i18n/ui-strings.properties
@@ -49,6 +49,10 @@ conversion.limits.stream-per-node=Streams per Node
 conversion.limits.nodes=Nodes
 conversion.limits.pages=Pages (if applicable)
 
+validator.null-value.message=value must not be empty
+validator.not-numeric.message=value must be numeric
+validator.not-positive.message=value must be positive
+
 job-log.title=Log Messages
 job-log.table.timestamp=Timestamp
 job-log.table.timestamp.format=HH:mm:ss.SSS
