Missed some UI strings

--- a/src/main/resources/i18n/ui-strings.properties
+++ b/src/main/resources/i18n/ui-strings.properties
@@ -113,6 +113,7 @@ options.misc.default-extension=default ext.
 options.misc.result-filename-pattern=result filename
 options.misc.server-history=server history
 options.misc.clear-server-history=Clear
+options.misc.updates.title=check for updates
 options.misc.updates.check-on-start=on every start
 options.misc.updates.check-never=never
 options.misc.updates.check-now=check now
