--- a/src/main/resources/i18n/ui-strings.properties
+++ b/src/main/resources/i18n/ui-strings.properties
@@ -65,7 +65,7 @@ job-log.table.cause=Cause
 server-log.title=Server Log
 server-log.url=Server URL;
 server-log.subscribe=Subscribe
-server-log.unsubscribe=Subscribe
+server-log.unsubscribe=Unsubscribe
 server-log.clear=Clear
 server-log.scroll-lock=Scoll Lock
 server-log.table.timestamp=Timestamp
