#15 Stub for the new cluster health pane

--- a/src/main/resources/i18n/ui-strings.properties
+++ b/src/main/resources/i18n/ui-strings.properties
@@ -5,6 +5,7 @@ app.home=home
 menu.title=jadice server :: Converter Client
 menu.conversion=Conversion
 menu.server-log=Server Log
+menu.cluster-health=Cluster Health
 menu.jmx=JMX
 menu.inspector=Inspector
 menu.update-available=Update Available
@@ -75,6 +76,9 @@ server-log.table.ndc=Nested Diagnostic Context
 server-log.table.logger=Logger
 server-log.table.message=Message
 server-log.table.stacktrace=Stacktrace
+
+cluster-health.title=Cluster Health
+
 
 jmx.title=JMX
 jmx.url=JMX URL
