--- a/src/main/resources/i18n/ui-strings.properties
+++ b/src/main/resources/i18n/ui-strings.properties
@@ -78,7 +78,11 @@ server-log.table.message=Message
 server-log.table.stacktrace=Stacktrace
 
 cluster-health.title=Cluster Health
-
+cluster-health.add-instance=Add Instance
+cluster-health.add-instance.title=Insert JMX URL
+cluster-health.add-instance.header-text=host:portnumber
+cluster-health.define-warnings=Define Warnings
+cluster-health.update-now=Update now
 
 jmx.title=JMX
 jmx.url=JMX URL
