--- a/src/main/resources/i18n/ui-strings.properties
+++ b/src/main/resources/i18n/ui-strings.properties
@@ -84,6 +84,16 @@ cluster-health.add-instance.header-text=host:portnumber
 cluster-health.define-warnings=Define Warnings
 cluster-health.update-now=Update now
 
+cluster-health.rule.server-running=Check if server is running
+cluster-health.rule.total-failure-rate=Failure rate
+cluster-health.rule.recent-failure-rate=Recent failure rate
+cluster-health.rule.avg-execution-time=Average execution time
+cluster-health.rule.recent-avg-execution-time=Recent avg execution time
+cluster-health.rule.recent-efficiency=Recent Efficiency
+cluster-health.auto-update=Update automatically every
+cluster-health.unit.ms=ms
+cluster-health.unit.min=min
+
 jmx.title=JMX
 jmx.url=JMX URL
 jmx.clear=Clear View
