--- a/src/main/resources/i18n/ui-strings.properties
+++ b/src/main/resources/i18n/ui-strings.properties
@@ -89,7 +89,7 @@ cluster-health.rule.total-failure-rate=Failure rate
 cluster-health.rule.recent-failure-rate=Recent failure rate
 cluster-health.rule.avg-execution-time=Average execution time
 cluster-health.rule.recent-avg-execution-time=Recent avg execution time
-cluster-health.rule.recent-efficiency=Recent Efficiency
+cluster-health.rule.recent-efficiency=Recent efficiency
 cluster-health.auto-update=Update automatically every
 cluster-health.unit.ms=ms
 cluster-health.unit.min=min
