#22: Make Locale configurable in OptionsPane

--- a/src/main/resources/i18n/ui-strings.properties
+++ b/src/main/resources/i18n/ui-strings.properties
@@ -117,6 +117,7 @@ options.misc.updates.title=check for updates
 options.misc.updates.check-on-start=on every start
 options.misc.updates.check-never=never
 options.misc.updates.check-now=check now
+options.misc.job-locale=job locale
 
 about.title=About
 about.about=About
