#15: Use a dedicated popover to add a new cluster instance

--- a/src/main/resources/i18n/ui-strings.properties
+++ b/src/main/resources/i18n/ui-strings.properties
@@ -79,8 +79,9 @@ server-log.table.stacktrace=Stacktrace
 
 cluster-health.title=Cluster Health
 cluster-health.add-instance=Add Instance
-cluster-health.add-instance.title=Insert JMX URL
-cluster-health.add-instance.header-text=host:portnumber
+cluster-health.add-instance.hostname=hostname
+cluster-health.add-instance.port=JMX port number
+cluster-health.add-instance.add=Add
 cluster-health.define-warnings=Define Warnings
 cluster-health.update-now=Update now
 
