--- a/src/main/resources/i18n/ui-strings.properties
+++ b/src/main/resources/i18n/ui-strings.properties
@@ -63,7 +63,7 @@ job-log.table.message=Message
 job-log.table.cause=Cause
 
 server-log.title=Server Log
-server-log.url=Server URL;
+server-log.url=Server URL
 server-log.subscribe=Subscribe
 server-log.unsubscribe=Unsubscribe
 server-log.clear=Clear
