Cache the JobFactories for a better performance

--- a/src/main/resources/i18n/ui-strings.properties
+++ b/src/main/resources/i18n/ui-strings.properties
@@ -127,8 +127,12 @@ about.log=Log
 
 dialogs.conversion.save-error.title=Error
 dialogs.conversion.save-error.masthead=Failed to save file
-# %s will be replaced by version numbers
+# %s will be replaced by file name
 dialogs.conversion.save-error.message=Could not save %s
+
+dialogs.conversion.submission-error.title=Error
+dialogs.conversion.submission-error.masthead=Could not start conversion job
+dialogs.conversion.submission-error.message=An error occurred when trying to submit a file to jadice server
 
 dialogs.jmx.connection-error.title=Error
 dialogs.jmx.connection-error.message=Could not connect to JMX
