#15: Add ability to export settings as JSON

--- a/src/main/resources/i18n/ui-strings.properties
+++ b/src/main/resources/i18n/ui-strings.properties
@@ -78,11 +78,14 @@ server-log.table.message=Message
 server-log.table.stacktrace=Stacktrace
 
 cluster-health.title=Cluster Health
-cluster-health.add-instance=Add Instance
+cluster-health.add-instance=Add instance
 cluster-health.add-instance.hostname=hostname
 cluster-health.add-instance.port=JMX port number
 cluster-health.add-instance.add=Add
-cluster-health.define-warnings=Define Warnings
+cluster-health.define-warnings=Define warnings
+cluster-health.settings=Cluster Health Settings
+cluster-health.export-settings=Export settings
+cluster-health.import-settings=Import settings
 cluster-health.update-now=Update now
 
 cluster-health.rule.server-running=Check if server is running
@@ -156,6 +159,11 @@ dialogs.jmx.connection-error.message=Could not connect to JMX
 
 dialogs.server-log.connection-error.title=Connection Error
 dialogs.server-log.connection-error.message=Cannot subscribe to server log
+
+dialogs.cluster-health.export-settings-error.title=Error
+dialogs.cluster-health.export-settings-error.masthead=Failed to export settings
+# %s will be replaced by file name
+dialogs.cluster-health.export-settings-error.message=Could not save %s
 
 dialogs.update.update-available.title=Update Check
 dialogs.update.update-available.masthead=New version available
