#15: Add ability to export imttings from JSON

--- a/src/main/resources/i18n/ui-strings.properties
+++ b/src/main/resources/i18n/ui-strings.properties
@@ -165,6 +165,11 @@ dialogs.cluster-health.export-settings-error.masthead=Failed to export settings
 # %s will be replaced by file name
 dialogs.cluster-health.export-settings-error.message=Could not save %s
 
+dialogs.cluster-health.import-settings-error.title=Error
+dialogs.cluster-health.import-settings-error.masthead=Failed to import settings
+# %s will be replaced by file name
+dialogs.cluster-health.import-settings-error.message=Could not load %s
+
 dialogs.update.update-available.title=Update Check
 dialogs.update.update-available.masthead=New version available
 # %s will be replaced by version numbers
